--- a/frontend/mlm-angular/angular.json
+++ b/frontend/mlm-angular/angular.json
@@ -25,9 +25,9 @@
               "src/assets"
             ],
             "styles": [
-              "styles.css",
-              "../node_modules/bootstrap/dist/css/bootstrap.min.css"
-              ],
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css"
+            ],
             "scripts": []
           },
           "configurations": {
