--- a/frontend/mlm-angular/tsconfig.json
+++ b/frontend/mlm-angular/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -30,8 +29,8 @@
       "@shared": ["app/shared"],
       "@shared/*": ["app/shared/*"],
       "@config": ["app/config"],
-      "@config/*": ["app/config/*"],
-    },
+      "@config/*": ["app/config/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
