--- a/frontend/mlm-angular/tsconfig.json
+++ b/frontend/mlm-angular/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": "src",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
